--- a/index.html
+++ b/index.html
@@ -169,10 +169,22 @@
         <div class="photo">
           <a rel="gallery" href="pic/b6.jpg"><img src="pic/s6.jpg" /></a>
         </div>
+        <div class="photo">
+            <a rel="gallery" href="pic/b6.jpg"><img src="pic/s6.jpg" /></a>
+        </div>
+        <div class="photo">
+          <a rel="gallery" href="pic/b5.jpg"><img src="pic/s5.jpg" /></a>
+        </div>
+        <div class="photo">
+          <a rel="gallery" href="pic/b6.jpg"><img src="pic/s6.jpg" /></a>
+        </div>
+        <div class="photo">
+          <a rel="gallery" href="pic/b6.jpg"><img src="pic/s6.jpg" /></a>
+        </div>
       </div>
       <div class="video-gallery" init='false' style="display:none;">
         <div class="photo">
-          <a href="pic/b4.jpg"><img src="pic/s1.jpg" /><span>播放</span></a>
+          <a href="video2.html"><img src="pic/s1.jpg" /><span>播放</span></a>
         </div>
         <div class="photo">
           <a href="video2.html"><img src="pic/s2.jpg" /><span>播放</span></a>
