--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8"/>
   <title>911 50周年</title>
   <meta name="viewport" content="width=device-width, minimum-scale=0.8, maximum-scale=0.8" />
+  <script type="text/javascript" src="./src/modernizr-2.5.3.min.js"></script>
   <script type="text/javascript"
     src="./lib/sea/sea-debug.js"
     data-config="../../app/config"
