add video event

--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
           <a href="video2.html"><img src="pic/s6.jpg" /><span>播放</span></a>
         </div>
       </div>
-      <div class="photo-slider" style="display:none;">
+      <div class="photo-slider" >
         <div class="slider-btn"></div>
       </div>
-      <div class="video-slider">
+      <div class="video-slider" style="display:none;">
         <div class="slider-btn"></div>
       </div>
       <div class="close"></div>
