--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         <div class="result-failure">
             请继续挑战有机会获取以下奖品：<br/>
             <p>
-                1.每个月坚持追逐时间最久第一名，可获得保时捷送出的“驾驶学校”课程，价值XXX万。<br/>
+                1.每个月坚持追逐时间最久第一名，可获得保时捷送出的“驾驶学校”课程，价值36,500元。<br/>
                 2.追逐5分钟以上，即可获得保时捷送出的 50 周年限量版明信片。
             </p>
             <div class="btn1 btn-again" style="margin-top: 28px;margin-left: 241px;">再玩一次</div>
