--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8"/>
   <title>911 50周年</title>
-  <meta name="viewport" content="width=device-width, minimum-scale=0.81, maximum-scale=0.81" />
+  <meta name="viewport" content="width=device-width, minimum-scale=0.81, maximum-scale=0.81, user-scalable=no" />
   <script type="text/javascript" src="./src/modernizr-2.5.3.min.js"></script>
   <script type="text/javascript"
     src="./lib/sea/sea-debug.js"
