--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta charset="utf-8"/>
-  <title>911 50周年</title>
+  <title>保时捷911-50周年</title>
   <meta name="viewport" content="width=device-width, minimum-scale=0.81, maximum-scale=0.81, user-scalable=no" />
   <script type="text/javascript" src="./src/modernizr-2.5.3.min.js"></script>
   <script type="text/javascript"
@@ -14,11 +14,8 @@
     .vml{behavior:url(#default#VML);display:inline-block;}
   </style>
   <![endif]-->
-  <!--[if IE 6]>
-  <script type="text/javascript" src="./src/DD_belatedPNG_0.0.8a-min.js"></script>
-  <script type="text/javascript">
-    DD_belatedPNG.fix('.car,.wheel');
-  </script>
+  <!--[if lt IE 8]>
+     <link href="./css/lowie.css" rel="stylesheet" type="text/css" />
   <![endif]-->
 
  <link href="./css/base.css" rel="stylesheet" type="text/css" />
@@ -212,11 +209,13 @@
               <a href="video2.html"><img src="pic/s4.jpg" /><span>播放</span></a>
           </div>
       </div>
-      <div class="photo-slider">
-        <div class="slider-btn"></div>
-      </div>
-      <div class="video-slider" style="display:none;">
-        <div class="slider-btn"></div>
+      <div class="slider-wrap">
+          <div class="photo-slider">
+            <div class="slider-btn"></div>
+          </div>
+          <div class="video-slider" style="display:none;">
+            <div class="slider-btn"></div>
+          </div>
       </div>
       <div class="close"></div>
     </div>
@@ -354,8 +353,6 @@
           <img class="num" src="images/c1.png" />
           <img class="num" src="images/c2.png" />
           <img class="num" src="images/c3.png" />
-          <img class="num" src="images/c4.png" />
-          <img class="num" src="images/c5.png" />
         </div>
       </div>
     </section>
