--- a/index.html
+++ b/index.html
@@ -97,15 +97,7 @@
             <div class="lpn-panel">
                 <div class="rule-wrap">
                     <div class="rule-title">游戏规则</div>
-                    <ol>
-                        <li>用户玩到第一次游戏结束的时就会出现弹框 (5分钟以下）<br/>
-                            请继续挑战，成绩超过5分钟者即有机会获取以下奖品：1.每个月追逐时间排行榜的第一名，可获得保时捷送出的“驾驶学校”课程，价值36,500元。 2.坚持追逐5分钟以上，即可活动保时捷送出的50周年限量版明信片。</li>
-                        <li>用户玩到第一次游戏结束的时就会出现弹框 (5分钟以上）<br/>
-                            您已经赢取了保时捷送出的50周年限量版明信片，请填写完整个人信息，工作人员会尽快与您联络奖品发送事宜。<br/>
-                            继续挑战：每个月追逐时间排行榜的第一名，可获得保时捷送出的“驾驶学校”课程，价值36,500元。<br/><br/>
-                            保时捷（中国）汽车销售有限公司保留获奖规则解释权。
-                        </li>
-                    </ol>
+                    <div class="rule-content"></div>
 
                 </div>
                 <div class="r-close"></div>
@@ -148,7 +140,7 @@
   <span class="lpn-ghost"></span>
   <div class="lpn-panel" style="overflow:visible;">
     <div id="gallery-wrap">
-      <div class="title"><div class="btn1 selected" style="margin-left: 200px;margin-right: 19px;margin-top: -7px;" >图片</div><div class="btn1 " style="margin-top: -7px;">视频</div></div>
+      <div class="title"><div class="btn1 selected" style="margin-left: 200px;margin-right: 19px;margin-top: 13px;" >图片</div><div class="btn1 " style="margin-top: 13px;">视频</div></div>
       <div class="photo-gallery" init='true'>
         <div class="photo">
           <a rel="gallery" href="pic/b1.jpg"><img src="pic/s1.jpg" /></a>
@@ -253,9 +245,10 @@
             <label>地址：<input name="address" type="text"></label>
         </form>
         <div class="result-form-suc" style="display:none;">
-            提交成功！<br/>
-            <div class="btn1 btn-again" style="margin-top: 38px;">再玩一次</div>
+            <br/>
+            <div class="btn1 btn-again" style="margin-top: 48px;margin-left:35px;">再玩一次</div>
         </div>
+        <div class="result-form-exist">您已提交相关信息</div>
         <div class="result-failure">
             请继续挑战有机会获取以下奖品：<br/>
             <p>
