--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
             <div class="lpn-panel">
                 <div class="rule-wrap">
                     <div class="rule-title">游戏规则</div>
-                    <div class="rule-content"></div>
+                    <div class="rule-content">
+                        <div class="rule-content-link"></div>
+                    </div>
 
                 </div>
                 <div class="r-close"></div>
@@ -228,21 +230,21 @@
       </div>
       <div class="result-con">
         <div class="result-tit" style="display:none;">
-            <strong>恭喜您！</strong>
+            <div class="result-con-title"></div>
             <ul>
                 <li>获得保时捷独家送出50周年限量版明信片。</li>
-                <li>每个月坚持追逐时间最久第一名，可获得保时捷送出的“驾驶学校”课程，价值xx万。</li>
+                <li>每个月坚持追逐时间最久第一名，可获得保时捷送出的“驾驶学校”课程，价值36,500万。</li>
                 <li>为确保能把奖品及时准确送到，请将个人信息填写完整。</li>
             </ul>
             <div class="btn1 btn-again" style="margin-top: 11px;margin-left: -21px;margin-right: 30px;">再玩一次</div>
             <div class="btn1 btn-submit" style="margin-top: 11px;">提交信息</div>
         </div>
         <form class="result-form" style="display:none;">
-            <label>姓名：<input name="name" type="text"></label>
-            <label>手机：<input name="tel" type="text"></label>
-            <label>邮箱：<input name="email" type="text"></label>
-            <label>邮编：<input name="code" type="text"></label>
-            <label>地址：<input name="address" type="text"></label>
+            <label>姓名<input name="name" type="text"></label>
+            <label>手机<input name="tel" type="text"></label>
+            <label>邮箱<input name="email" type="text"></label>
+            <label>邮编<input name="code" type="text"></label>
+            <label>地址<input name="address" type="text"></label>
         </form>
         <div class="result-form-suc" style="display:none;">
             <br/>
@@ -250,11 +252,7 @@
         </div>
         <div class="result-form-exist">您已提交相关信息</div>
         <div class="result-failure">
-            请继续挑战有机会获取以下奖品：<br/>
-            <p>
-                1.每个月坚持追逐时间最久第一名，可获得保时捷送出的“驾驶学校”课程，价值36,500元。<br/>
-                2.追逐5分钟以上，即可获得保时捷送出的 50 周年限量版明信片。
-            </p>
+            <div class="result-failure-content"></div>
             <div class="btn1 btn-again" style="margin-top: 28px;margin-left: 241px;">再玩一次</div>
         </div>
       </div>
