--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
       </div>
       <div class="slider-wrap">
           <div class="photo-slider">
-            <div class="slider-btn"></div>
+            <div class="slider-btn"><div class="slider-btn-inner"></div></div>
           </div>
           <div class="video-slider" style="display:none;">
-            <div class="slider-btn"></div>
+            <div class="slider-btn"><div class="slider-btn-inner"></div></div>
           </div>
       </div>
       <div class="close"></div>
