--- a/index.html
+++ b/index.html
@@ -309,15 +309,21 @@
             <span class="board-r" id="share-btn">分享</span>
             <div class="board-share" id="share-con">
                 <a target="_blank" href="http://v.t.sina.com.cn/share/share.php?title=911%2050th&amp;url=http://50years911.porsche-events.cn%2f&amp;pic=http://50years911.porsche-events.cn/91150th.jpg&amp;appkey=2455498088" title="分享到新浪微博" class="sina"></a>
-                <a target="_blank" href="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url=http://50years911.porsche-events.cn%2f&amp;amp;title=911%2050th" title="分享到QQ空间" class="qzone"></a>
-                <a target="_blank" href="http://www.kaixin001.com/repaste/share.php?rtitle=Fascination+Porsche+2013&amp;amp;rurl=http://50years911.porsche-events.cn%2f&amp;amp;rcontent=911%2050th" title="分享到开心网" class="kaixing"></a>
+                <!--<a target="_blank" href="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url=http://50years911.porsche-events.cn%2f&amp;amp;title=911%2050th" title="分享到QQ空间" class="qzone"></a>
+                <a target="_blank" href="http://www.kaixin001.com/repaste/share.php?rtitle=Fascination+Porsche+2013&amp;amp;rurl=http://50years911.porsche-events.cn%2f&amp;amp;rcontent=911%2050th" title="分享到开心网" class="kaixing"></a>-->
+                <a id="share_douban" target="_blank" href="http://shuo.douban.com/!service/share?&amp;href=http://50years911.porsche-events.cn%2f&amp;name=911%2050th" title="分享到豆瓣" class="douban"></a>
                 <a target="_blank" href="http://v.t.qq.com/share/share.php?title=911%2050th&amp;amp;pic=http://50years911.porsche-events.cn/91150th.jpg" title="分享到QQ微博" class="qqwb"></a>
                 <a target="_blank" href="http://share.renren.com/share/buttonshare.do?link=http://50years911.porsche-events.cn%2f&amp;amp;title=911%2050th" title="分享到人人网" class="renren"></a>
-                <a target="_blank" href="http://t.sohu.com/third/post.jsp?&amp;url=http://50years911.porsche-events.cn%2f&amp;title=911%2050th" title="分享到搜狐微博" class="tt"></a>
+                <!--<a target="_blank" href="http://t.sohu.com/third/post.jsp?&amp;url=http://50years911.porsche-events.cn%2f&amp;title=911%2050th" title="分享到搜狐微博" class="tt"></a>-->
             </div>
           </div>
         </div>
-        <img src="images/p-bg-r.png" id="main-board-bg-r" class="main-board-bg-r" />
+        <div id="main-board-bg-r" class="main-board-bg-r">
+          <div class="inner">
+            <a target="_blank" href="http://e.weibo.com/porschechina" title="关注新浪微博" class="sina"></a>
+            <span>关注</span>
+          </div>
+        </div>
       </div>
       <div class="main-bottom">
         <a target="_blank" href="http://www.porsche.com/china/">©2013保时捷中国</a> <a target="_blank" href="http://www.porsche.com/china/zh/legal-notice/">法律公告</a>
