--- a/index.html
+++ b/index.html
@@ -162,37 +162,37 @@
         <a rel="gallery" href="pic/b6.jpg"><img src="pic/s6.jpg" /></a>
         </div>
         <div class="photo">
-        <a rel="gallery" href="pic/b1.jpg"><img src="pic/s7.jpg" /></a>
+        <a rel="gallery" href="pic/b7.jpg"><img src="pic/s7.jpg" /></a>
         </div>
         <div class="photo">
-        <a rel="gallery" href="pic/b2.jpg"><img src="pic/s8.jpg" /></a>
+        <a rel="gallery" href="pic/b8.jpg"><img src="pic/s8.jpg" /></a>
         </div>
         <div class="photo">
-        <a rel="gallery" href="pic/b3.jpg"><img src="pic/s9.jpg" /></a>
+        <a rel="gallery" href="pic/b9.jpg"><img src="pic/s9.jpg" /></a>
         </div>
         <div class="photo">
-          <a rel="gallery" href="pic/b3.jpg"><img src="pic/s10.jpg" /></a>
+          <a rel="gallery" href="pic/b10.jpg"><img src="pic/s10.jpg" /></a>
         </div>
         <div class="photo">
-          <a rel="gallery" href="pic/b3.jpg"><img src="pic/s11.jpg" /></a>
+          <a rel="gallery" href="pic/b11.jpg"><img src="pic/s11.jpg" /></a>
         </div>
         <div class="photo">
-          <a rel="gallery" href="pic/b3.jpg"><img src="pic/s12.jpg" /></a>
+          <a rel="gallery" href="pic/b12.jpg"><img src="pic/s12.jpg" /></a>
         </div>
         <div class="photo">
-          <a rel="gallery" href="pic/b3.jpg"><img src="pic/s13.jpg" /></a>
+          <a rel="gallery" href="pic/b13.jpg"><img src="pic/s13.jpg" /></a>
         </div>
         <div class="photo">
-          <a rel="gallery" href="pic/b3.jpg"><img src="pic/s14.jpg" /></a>
+          <a rel="gallery" href="pic/b14.jpg"><img src="pic/s14.jpg" /></a>
         </div>
         <div class="photo">
-          <a rel="gallery" href="pic/b3.jpg"><img src="pic/s15.jpg" /></a>
+          <a rel="gallery" href="pic/b15.jpg"><img src="pic/s15.jpg" /></a>
         </div>
         <div class="photo">
-          <a rel="gallery" href="pic/b3.jpg"><img src="pic/s16.jpg" /></a>
+          <a rel="gallery" href="pic/b16.jpg"><img src="pic/s16.jpg" /></a>
         </div>
         <div class="photo">
-          <a rel="gallery" href="pic/b3.jpg"><img src="pic/s17.jpg" /></a>
+          <a rel="gallery" href="pic/b17.jpg"><img src="pic/s17.jpg" /></a>
         </div>
       </div>
       <div class="video-gallery" init='false' style="display:none;">
@@ -328,9 +328,11 @@
           </div>
         </div>
         <div id="main-board-bg-r" class="main-board-bg-r">
-          <div class="inner">
-            <a target="_blank" href="http://e.weibo.com/porschechina" title="关注新浪微博" class="sina"></a>
-            <span>关注</span>
+          <div class="follow_sina">
+              <div class="inner">
+                <a target="_blank" href="http://e.weibo.com/porschechina" title="关注新浪微博" class="sina"></a>
+                <span>关注</span>
+              </div>
           </div>
         </div>
       </div>
