--- a/index.html
+++ b/index.html
@@ -141,60 +141,193 @@
   <span class="lpn-ghost"></span>
   <div class="lpn-panel" style="overflow:visible;">
     <div id="gallery-wrap">
-      <div class="title"><div class="btn1 selected" style="margin-left: 200px;margin-right: 19px;margin-top: 13px;" >经典壁纸</div><div class="btn1 " style="margin-top: 13px;">视频</div></div>
+      <div class="title">
+          <div class="btn1 btn_1 selected" style="margin-left: 269px;margin-top: 20px;" ><span></span></div>
+          <div class="btn1 btn_2" style="margin-top: 20px;"><span></span></div>
+          <div class="btn1 btn_3" style="margin-top: 20px;"><span></span></div>
+          <div class="btn1 btn_4" style="margin-top: 20px;"><span></span></div>
+          <div class="btn1 btn_5" style="margin-top: 20px;"><span></span></div>
+      </div>
+      <!--//gallery1-->
       <div class="photo-gallery" init='true'>
         <div class="photo">
-        <a rel="gallery" href="pic/b1.jpg"><img src="pic/s1.jpg" /></a>
+        <a rel="gallery" href="pic/g1/b1.jpg"><img src="pic/g1/s1.jpg" /></a>
         </div>
         <div class="photo">
-        <a rel="gallery" href="pic/b2.jpg"><img src="pic/s2.jpg" /></a>
+        <a rel="gallery" href="pic/g1/b2.jpg"><img src="pic/g1/s2.jpg" /></a>
         </div>
         <div class="photo">
-        <a rel="gallery" href="pic/b3.jpg"><img src="pic/s3.jpg" /></a>
+        <a rel="gallery" href="pic/g1/b3.jpg"><img src="pic/g1/s3.jpg" /></a>
         </div>
         <div class="photo">
-        <a rel="gallery" href="pic/b4.jpg"><img src="pic/s4.jpg" /></a>
+        <a rel="gallery" href="pic/g1/b4.jpg"><img src="pic/g1/s4.jpg" /></a>
         </div>
         <div class="photo">
-        <a rel="gallery" href="pic/b5.jpg"><img src="pic/s5.jpg" /></a>
+        <a rel="gallery" href="pic/g1/b5.jpg"><img src="pic/g1/s5.jpg" /></a>
         </div>
         <div class="photo">
-        <a rel="gallery" href="pic/b6.jpg"><img src="pic/s6.jpg" /></a>
+        <a rel="gallery" href="pic/g1/b6.jpg"><img src="pic/g1/s6.jpg" /></a>
         </div>
         <div class="photo">
-        <a rel="gallery" href="pic/b7.jpg"><img src="pic/s7.jpg" /></a>
+        <a rel="gallery" href="pic/g1/b7.jpg"><img src="pic/g1/s7.jpg" /></a>
         </div>
         <div class="photo">
-        <a rel="gallery" href="pic/b8.jpg"><img src="pic/s8.jpg" /></a>
+        <a rel="gallery" href="pic/g1/b8.jpg"><img src="pic/g1/s8.jpg" /></a>
         </div>
         <div class="photo">
-        <a rel="gallery" href="pic/b9.jpg"><img src="pic/s9.jpg" /></a>
+        <a rel="gallery" href="pic/g1/b9.jpg"><img src="pic/g1/s9.jpg" /></a>
         </div>
         <div class="photo">
-          <a rel="gallery" href="pic/b10.jpg"><img src="pic/s10.jpg" /></a>
+          <a rel="gallery" href="pic/g1/b10.jpg"><img src="pic/g1/s10.jpg" /></a>
         </div>
         <div class="photo">
-          <a rel="gallery" href="pic/b11.jpg"><img src="pic/s11.jpg" /></a>
+          <a rel="gallery" href="pic/g1/b11.jpg"><img src="pic/g1/s11.jpg" /></a>
         </div>
         <div class="photo">
-          <a rel="gallery" href="pic/b12.jpg"><img src="pic/s12.jpg" /></a>
+          <a rel="gallery" href="pic/g1/b12.jpg"><img src="pic/g1/s12.jpg" /></a>
         </div>
         <div class="photo">
-          <a rel="gallery" href="pic/b13.jpg"><img src="pic/s13.jpg" /></a>
+          <a rel="gallery" href="pic/g1/b13.jpg"><img src="pic/g1/s13.jpg" /></a>
         </div>
         <div class="photo">
-          <a rel="gallery" href="pic/b14.jpg"><img src="pic/s14.jpg" /></a>
+          <a rel="gallery" href="pic/g1/b14.jpg"><img src="pic/g1/s14.jpg" /></a>
         </div>
         <div class="photo">
-          <a rel="gallery" href="pic/b15.jpg"><img src="pic/s15.jpg" /></a>
+          <a rel="gallery" href="pic/g1/b15.jpg"><img src="pic/g1/s15.jpg" /></a>
         </div>
         <div class="photo">
-          <a rel="gallery" href="pic/b16.jpg"><img src="pic/s16.jpg" /></a>
+          <a rel="gallery" href="pic/g1/b16.jpg"><img src="pic/g1/s16.jpg" /></a>
         </div>
         <div class="photo">
-          <a rel="gallery" href="pic/b17.jpg"><img src="pic/s17.jpg" /></a>
+          <a rel="gallery" href="pic/g1/b17.jpg"><img src="pic/g1/s17.jpg" /></a>
         </div>
       </div>
+      <!--\\gallery1-->
+
+        <!--//gallery2-->
+        <div class="photo-gallery" init='true' style="display:none;">
+            <div class="photo">
+                <a rel="gallery" href="pic/g2/b1.jpg"><img src="pic/g2/s1.jpg" /></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g2/b2.jpg"><img src="pic/g2/s2.jpg" /></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g2/b3.jpg"><img src="pic/g2/s3.jpg" /></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g2/b4.jpg"><img src="pic/g2/s4.jpg" /></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g2/b5.jpg"><img src="pic/g2/s5.jpg" /></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g2/b6.jpg"><img src="pic/g2/s6.jpg" /></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g2/b7.jpg"><img src="pic/g2/s7.jpg" /></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g2/b8.jpg"><img src="pic/g2/s8.jpg" /></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g2/b9.jpg"><img src="pic/g2/s9.jpg" /></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g2/b10.jpg"><img src="pic/g2/s10.jpg" /></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g2/b11.jpg"><img src="pic/g2/s11.jpg" /></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g2/b12.jpg"><img src="pic/g2/s12.jpg" /></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g2/b13.jpg"><img src="pic/g2/s13.jpg" /></a>
+            </div>
+        </div>
+        <!--\\gallery2-->
+
+      <!--//gallery3-->
+      <div class="photo-gallery" init='true' style="display:none;">
+          <div class="photo">
+              <a rel="gallery" href="pic/g3/b1.jpg"><img src="pic/g3/s1.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g3/b2.jpg"><img src="pic/g3/s2.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g3/b3.jpg"><img src="pic/g3/s3.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g3/b4.jpg"><img src="pic/g3/s4.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g3/b5.jpg"><img src="pic/g3/s5.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g3/b6.jpg"><img src="pic/g3/s6.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g3/b7.jpg"><img src="pic/g3/s7.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g3/b8.jpg"><img src="pic/g3/s8.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g3/b9.jpg"><img src="pic/g3/s9.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g3/b10.jpg"><img src="pic/g3/s10.jpg" /></a>
+          </div>
+      </div>
+      <!--\\gallery3-->
+
+      <!--//gallery4-->
+      <div class="photo-gallery" init='true' style="display:none;">
+          <div class="photo">
+              <a rel="gallery" href="pic/g4/b1.jpg"><img src="pic/g4/s1.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g4/b2.jpg"><img src="pic/g4/s2.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g4/b3.jpg"><img src="pic/g4/s3.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g4/b4.jpg"><img src="pic/g4/s4.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g4/b5.jpg"><img src="pic/g4/s5.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g4/b6.jpg"><img src="pic/g4/s6.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g4/b7.jpg"><img src="pic/g4/s7.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g4/b8.jpg"><img src="pic/g4/s8.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g4/b9.jpg"><img src="pic/g4/s9.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g4/b10.jpg"><img src="pic/g4/s10.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g4/b11.jpg"><img src="pic/g4/s11.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g4/b12.jpg"><img src="pic/g4/s12.jpg" /></a>
+          </div>
+          <div class="photo">
+              <a rel="gallery" href="pic/g4/b13.jpg"><img src="pic/g4/s13.jpg" /></a>
+          </div>
+      </div>
+      <!--\\gallery4-->
+
+      <!--//video-->
       <div class="video-gallery" init='false' style="display:none;">
             <div class="photo">
               <a href="video.php?id=1"><img src="pic/v1.jpg" /><span>播放</span></a>
@@ -218,9 +351,20 @@
               <a href="video.php?id=7"><img src="pic/v7.jpg" /><span>播放</span></a>
             </div>
       </div>
+      <!--//video-->
+
       <div class="slider-wrap">
           <div class="photo-slider">
             <div class="slider-btn"><div class="slider-btn-inner"></div></div>
+          </div>
+          <div class="photo-slider" style="display:none;">
+              <div class="slider-btn"><div class="slider-btn-inner"></div></div>
+          </div>
+          <div class="photo-slider" style="display:none;">
+              <div class="slider-btn"><div class="slider-btn-inner"></div></div>
+          </div>
+          <div class="photo-slider" style="display:none;">
+              <div class="slider-btn"><div class="slider-btn-inner"></div></div>
           </div>
           <div class="video-slider" style="display:none;">
             <div class="slider-btn"><div class="slider-btn-inner"></div></div>
