--- a/index.html
+++ b/index.html
@@ -25,20 +25,15 @@
   <!--[if IE]>
   <link href="./css/ie.css" rel="stylesheet" type="text/css" />
   <![endif]-->
-<script type="text/javascript">
- /*
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-40136895-1']);
-  _gaq.push(['_setDomainName', 'porsche-event.cn']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-*/
-</script>
+     <script>
+         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new
+                 Date();a=s.createElement(o),
+                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+         ga('create','UA-40136895-2', 'porsche-events.cn');
+         ga('send','pageview');
+     </script>
  </head>
  <body onselectstart="return false">
     <!---// loading start -->
@@ -147,11 +142,15 @@
           <div class="btn1 btn_3" style="margin-top: 20px;"><span></span></div>
           <div class="btn1 btn_4" style="margin-top: 20px;"><span></span></div>
           <div class="btn1 btn_5" style="margin-top: 20px;"><span></span></div>
+          <div class="btn1 btn_6" style="margin-top: 20px;"><span></span></div>
+          <div class="btn1 btn_7" style="margin-top: 20px;"><span></span></div>
+          <div class="btn1 btn_8" style="margin-top: 20px;"><span></span></div>
       </div>
       <!--//gallery1-->
       <div class="photo-gallery" init='true'>
         <div class="photo">
-        <a rel="gallery" href="pic/g1/b1.jpg"><img src="pic/g1/s1.jpg" /></a>
+        <a rel="gallery" href="pic/g1/b1.jpg"><img src="pic/g1/s1.jpg" />
+            <div class="desc">911 原型车 － 跑车传奇诞生 (1963 – 1973)<br/>作为保时捷 356 的继任车型，911 从诞生伊始就征服了全世界跑车爱好者。1963 年，911 原型车以“901”之名在德国法兰克福车展上面世。1964 年，它被重新命名为“911”推向市场。</div></a>
         </div>
         <div class="photo">
         <a rel="gallery" href="pic/g1/b2.jpg"><img src="pic/g1/s2.jpg" /></a>
@@ -160,54 +159,17 @@
         <a rel="gallery" href="pic/g1/b3.jpg"><img src="pic/g1/s3.jpg" /></a>
         </div>
         <div class="photo">
-        <a rel="gallery" href="pic/g1/b4.jpg"><img src="pic/g1/s4.jpg" /></a>
-        </div>
-        <div class="photo">
-        <a rel="gallery" href="pic/g1/b5.jpg"><img src="pic/g1/s5.jpg" /></a>
-        </div>
-        <div class="photo">
-        <a rel="gallery" href="pic/g1/b6.jpg"><img src="pic/g1/s6.jpg" /></a>
-        </div>
-        <div class="photo">
-        <a rel="gallery" href="pic/g1/b7.jpg"><img src="pic/g1/s7.jpg" /></a>
-        </div>
-        <div class="photo">
-        <a rel="gallery" href="pic/g1/b8.jpg"><img src="pic/g1/s8.jpg" /></a>
-        </div>
-        <div class="photo">
-        <a rel="gallery" href="pic/g1/b9.jpg"><img src="pic/g1/s9.jpg" /></a>
-        </div>
-        <div class="photo">
-          <a rel="gallery" href="pic/g1/b10.jpg"><img src="pic/g1/s10.jpg" /></a>
-        </div>
-        <div class="photo">
-          <a rel="gallery" href="pic/g1/b11.jpg"><img src="pic/g1/s11.jpg" /></a>
-        </div>
-        <div class="photo">
-          <a rel="gallery" href="pic/g1/b12.jpg"><img src="pic/g1/s12.jpg" /></a>
-        </div>
-        <div class="photo">
-          <a rel="gallery" href="pic/g1/b13.jpg"><img src="pic/g1/s13.jpg" /></a>
-        </div>
-        <div class="photo">
-          <a rel="gallery" href="pic/g1/b14.jpg"><img src="pic/g1/s14.jpg" /></a>
-        </div>
-        <div class="photo">
-          <a rel="gallery" href="pic/g1/b15.jpg"><img src="pic/g1/s15.jpg" /></a>
-        </div>
-        <div class="photo">
-          <a rel="gallery" href="pic/g1/b16.jpg"><img src="pic/g1/s16.jpg" /></a>
-        </div>
-        <div class="photo">
-          <a rel="gallery" href="pic/g1/b17.jpg"><img src="pic/g1/s17.jpg" /></a>
+          <a rel="gallery" href="pic/g1/b4.jpg"><img src="pic/g1/s4.jpg" /></a>
         </div>
       </div>
       <!--\\gallery1-->
 
         <!--//gallery2-->
         <div class="photo-gallery" init='true' style="display:none;">
+
             <div class="photo">
-                <a rel="gallery" href="pic/g2/b1.jpg"><img src="pic/g2/s1.jpg" /></a>
+
+                <a rel="gallery" href="pic/g2/b1.jpg"><img src="pic/g2/s1.jpg" /><div class="desc">G 系列 － 首次全面改进 (1973 – 1988)<br/>在 911 面世十年后，保时捷工程师们对 911 进行了更加全面的升级改造。新一代 911 被荣耀地称为“G 车型”，从 1973 年一直生产到 1989 年，市场周期超过以往任何一款前代车型。</div></a>
             </div>
             <div class="photo">
                 <a rel="gallery" href="pic/g2/b2.jpg"><img src="pic/g2/s2.jpg" /></a>
@@ -218,40 +180,14 @@
             <div class="photo">
                 <a rel="gallery" href="pic/g2/b4.jpg"><img src="pic/g2/s4.jpg" /></a>
             </div>
-            <div class="photo">
-                <a rel="gallery" href="pic/g2/b5.jpg"><img src="pic/g2/s5.jpg" /></a>
-            </div>
-            <div class="photo">
-                <a rel="gallery" href="pic/g2/b6.jpg"><img src="pic/g2/s6.jpg" /></a>
-            </div>
-            <div class="photo">
-                <a rel="gallery" href="pic/g2/b7.jpg"><img src="pic/g2/s7.jpg" /></a>
-            </div>
-            <div class="photo">
-                <a rel="gallery" href="pic/g2/b8.jpg"><img src="pic/g2/s8.jpg" /></a>
-            </div>
-            <div class="photo">
-                <a rel="gallery" href="pic/g2/b9.jpg"><img src="pic/g2/s9.jpg" /></a>
-            </div>
-            <div class="photo">
-                <a rel="gallery" href="pic/g2/b10.jpg"><img src="pic/g2/s10.jpg" /></a>
-            </div>
-            <div class="photo">
-                <a rel="gallery" href="pic/g2/b11.jpg"><img src="pic/g2/s11.jpg" /></a>
-            </div>
-            <div class="photo">
-                <a rel="gallery" href="pic/g2/b12.jpg"><img src="pic/g2/s12.jpg" /></a>
-            </div>
-            <div class="photo">
-                <a rel="gallery" href="pic/g2/b13.jpg"><img src="pic/g2/s13.jpg" /></a>
-            </div>
         </div>
         <!--\\gallery2-->
 
       <!--//gallery3-->
       <div class="photo-gallery" init='true' style="display:none;">
           <div class="photo">
-              <a rel="gallery" href="pic/g3/b1.jpg"><img src="pic/g3/s1.jpg" /></a>
+
+              <a rel="gallery" href="pic/g3/b1.jpg"><img src="pic/g3/s1.jpg" /><div class="desc">964 型 － 现代经典问世 (1988 – 1993) <br/>当许多人担忧一个时代或许即将结束时，保时捷于 1988 年适时推出了 911 Carrera 4 (964)。经过 15 年的发展，911 中 85% 的部件都已更新，成为了一款兼备时尚触觉与可持续性效能的保时捷旗舰车型。</div></a>
           </div>
           <div class="photo">
               <a rel="gallery" href="pic/g3/b2.jpg"><img src="pic/g3/s2.jpg" /></a>
@@ -262,31 +198,15 @@
           <div class="photo">
               <a rel="gallery" href="pic/g3/b4.jpg"><img src="pic/g3/s4.jpg" /></a>
           </div>
-          <div class="photo">
-              <a rel="gallery" href="pic/g3/b5.jpg"><img src="pic/g3/s5.jpg" /></a>
-          </div>
-          <div class="photo">
-              <a rel="gallery" href="pic/g3/b6.jpg"><img src="pic/g3/s6.jpg" /></a>
-          </div>
-          <div class="photo">
-              <a rel="gallery" href="pic/g3/b7.jpg"><img src="pic/g3/s7.jpg" /></a>
-          </div>
-          <div class="photo">
-              <a rel="gallery" href="pic/g3/b8.jpg"><img src="pic/g3/s8.jpg" /></a>
-          </div>
-          <div class="photo">
-              <a rel="gallery" href="pic/g3/b9.jpg"><img src="pic/g3/s9.jpg" /></a>
-          </div>
-          <div class="photo">
-              <a rel="gallery" href="pic/g3/b10.jpg"><img src="pic/g3/s10.jpg" /></a>
-          </div>
       </div>
       <!--\\gallery3-->
 
       <!--//gallery4-->
       <div class="photo-gallery" init='true' style="display:none;">
+
           <div class="photo">
-              <a rel="gallery" href="pic/g4/b1.jpg"><img src="pic/g4/s1.jpg" /></a>
+
+              <a rel="gallery" href="pic/g4/b1.jpg"><img src="pic/g4/s1.jpg" /><div class="desc">993 型 － 风冷式 911 的谢幕 (1993 – 1997) <br/>内部编号为 993 的 911 车型，至今依然是众多保时捷车主的最爱。其出类拔萃的设计使得它堪称一代经典。一体式保险杠突出了平稳、优雅的风格；将圆形大灯改成椭圆形大灯，使其前部线条较前代车型更为平滑。</div></a>
           </div>
           <div class="photo">
               <a rel="gallery" href="pic/g4/b2.jpg"><img src="pic/g4/s2.jpg" /></a>
@@ -297,35 +217,62 @@
           <div class="photo">
               <a rel="gallery" href="pic/g4/b4.jpg"><img src="pic/g4/s4.jpg" /></a>
           </div>
-          <div class="photo">
-              <a rel="gallery" href="pic/g4/b5.jpg"><img src="pic/g4/s5.jpg" /></a>
-          </div>
-          <div class="photo">
-              <a rel="gallery" href="pic/g4/b6.jpg"><img src="pic/g4/s6.jpg" /></a>
-          </div>
-          <div class="photo">
-              <a rel="gallery" href="pic/g4/b7.jpg"><img src="pic/g4/s7.jpg" /></a>
-          </div>
-          <div class="photo">
-              <a rel="gallery" href="pic/g4/b8.jpg"><img src="pic/g4/s8.jpg" /></a>
-          </div>
-          <div class="photo">
-              <a rel="gallery" href="pic/g4/b9.jpg"><img src="pic/g4/s9.jpg" /></a>
-          </div>
-          <div class="photo">
-              <a rel="gallery" href="pic/g4/b10.jpg"><img src="pic/g4/s10.jpg" /></a>
-          </div>
-          <div class="photo">
-              <a rel="gallery" href="pic/g4/b11.jpg"><img src="pic/g4/s11.jpg" /></a>
-          </div>
-          <div class="photo">
-              <a rel="gallery" href="pic/g4/b12.jpg"><img src="pic/g4/s12.jpg" /></a>
-          </div>
-          <div class="photo">
-              <a rel="gallery" href="pic/g4/b13.jpg"><img src="pic/g4/s13.jpg" /></a>
-          </div>
       </div>
       <!--\\gallery4-->
+
+        <!--//gallery5-->
+        <div class="photo-gallery" init='true' style="display:none;">
+            <div class="photo">
+
+                <a rel="gallery" href="pic/g5/b1.jpg"><img src="pic/g5/s1.jpg" /><div class="desc">996 型 －水冷式车型登场 (1997 – 2004)<br/>于 1997 至 2005 年间投入生产的 996 型，堪称 911 发展史中的一大转折点。这一代保时捷 911 首次采用水冷式水平对置发动机，是全面技术改良的一大成果。其输出功率能够达到 300 hp，并在降低排放、噪音和耗油量方面均有所突破。</div></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g5/b2.jpg"><img src="pic/g5/s2.jpg" /></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g5/b3.jpg"><img src="pic/g5/s3.jpg" /></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g5/b4.jpg"><img src="pic/g5/s4.jpg" /></a>
+            </div>
+        </div>
+        <!--\\gallery5-->
+
+        <!--//gallery6-->
+        <div class="photo-gallery" init='true' style="display:none;">
+            <div class="photo">
+
+                <a rel="gallery" href="pic/g6/b1.jpg"><img src="pic/g6/s1.jpg" /><div class="desc">997 型 － 经典与时尚的完美融合 (2004 – 2011)<br/>2004 年 7 月，保时捷发布了新一代 911 Carrera 和 911 Carrera S，内部编号为 997。前裙板配备了带有独立辅助车灯模组的透明玻璃大灯，彰显了传统 911 的蛙眼设计风格。997 型拥有醒目的造型和出色的行驶性能，令人折服。</div></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g6/b2.jpg"><img src="pic/g6/s2.jpg" /></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g6/b3.jpg"><img src="pic/g6/s3.jpg" /></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g6/b4.jpg"><img src="pic/g6/s4.jpg" /></a>
+            </div>
+        </div>
+        <!--\\gallery6-->
+
+        <!--//gallery7-->
+        <div class="photo-gallery" init='true' style="display:none;">
+            <div class="photo">
+
+                <a rel="gallery" href="pic/g7/b1.jpg"><img src="pic/g7/s1.jpg" /> <div class="desc">991 型 － 散发成熟魅力的梦想跑车 (2011 至今)<br/>这款跑车在保时捷内部被称为 991 型，反映了 911 发展中重大的技术飞跃。全新的悬挂结合加长轴距、加宽轮距、加大轮胎以及经过人体工程学优化的内饰，共同缔造了更具运动感及舒适性的驾驶体验。</div></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g7/b2.jpg"><img src="pic/g7/s2.jpg" /></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g7/b3.jpg"><img src="pic/g7/s3.jpg" /></a>
+            </div>
+            <div class="photo">
+                <a rel="gallery" href="pic/g7/b4.jpg"><img src="pic/g7/s4.jpg" /></a>
+            </div>
+        </div>
+        <!--\\gallery7-->
 
       <!--//video-->
       <div class="video-gallery" init='false' style="display:none;">
@@ -368,6 +315,18 @@
           </div>
           <div class="video-slider" style="display:none;">
             <div class="slider-btn"><div class="slider-btn-inner"></div></div>
+          </div>
+
+          <div class="video-slider" style="display:none;">
+              <div class="slider-btn"><div class="slider-btn-inner"></div></div>
+          </div>
+
+          <div class="video-slider" style="display:none;">
+              <div class="slider-btn"><div class="slider-btn-inner"></div></div>
+          </div>
+
+          <div class="video-slider" style="display:none;">
+              <div class="slider-btn"><div class="slider-btn-inner"></div></div>
           </div>
       </div>
       <div class="close"></div>
