monthly ranking function

--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
         <div class="ranking">
             <div class="r-close"></div>
             <div class="r-head">
-              <div class="btn selected">6月份<div class="btn-r"></div></div>
+                <div id="ranking-month">
+
+                </div>
               <!--<div class="btn">7月份<div class="btn-r"></div></div>-->
               <!--<div class="btn">8月份<div class="btn-r"></div></div>-->
               <span class='r-head-title'>排行榜</span>
@@ -137,17 +139,17 @@
   <div class="lpn-panel" style="overflow:visible;">
     <div id="gallery-wrap">
       <div class="title">
-          <div class="btn1 btn_1 selected" style="margin-left: 269px;margin-top: 20px;" ><span></span></div>
+          <div class="btn1 btn_1" style="margin-left: 269px;margin-top: 20px;" ><span></span></div>
           <div class="btn1 btn_2" style="margin-top: 20px;"><span></span></div>
           <div class="btn1 btn_3" style="margin-top: 20px;"><span></span></div>
           <div class="btn1 btn_4" style="margin-top: 20px;"><span></span></div>
           <div class="btn1 btn_5" style="margin-top: 20px;"><span></span></div>
           <div class="btn1 btn_6" style="margin-top: 20px;"><span></span></div>
           <div class="btn1 btn_7" style="margin-top: 20px;"><span></span></div>
-          <div class="btn1 btn_8" style="margin-top: 20px;"><span></span></div>
+          <div class="btn1 btn_8 selected" style="margin-top: 20px;"><span></span></div>
       </div>
       <!--//gallery1-->
-      <div class="photo-gallery" init='true'>
+      <div class="photo-gallery" init='true' style="display:none;">
         <div class="photo">
         <a rel="gallery" href="pic/g1/b2.jpg"><img src="pic/g1/s2.jpg" /><div class="desc">第一代911: 911原型车 － 跑车传奇诞生(1963 - 1973)<br/>作为保时捷 356 的继任车型，911 从诞生伊始就征服了全世界跑车爱好者。1963 年，911 原型车以“901”之名在德国法兰克福车展上面世。1964 年，它被重新命名为“911”推向市场。</div></a>
         </div>
@@ -268,7 +270,7 @@
         <!--\\gallery7-->
 
       <!--//video-->
-      <div class="video-gallery" init='false' style="display:none;">
+      <div class="video-gallery" init='false'>
             <div class="photo">
               <a href="video.php?id=1"><img src="pic/v1.jpg" /><span>播放</span></a>
             </div>
@@ -294,7 +296,7 @@
       <!--//video-->
 
       <div class="slider-wrap">
-          <div class="photo-slider">
+          <div class="photo-slider" style="display:none;">
             <div class="slider-btn"><div class="slider-btn-inner"></div></div>
           </div>
           <div class="photo-slider" style="display:none;">
@@ -318,7 +320,7 @@
               <div class="slider-btn"><div class="slider-btn-inner"></div></div>
           </div>
 
-          <div class="video-slider" style="display:none;">
+          <div class="video-slider">
               <div class="slider-btn"><div class="slider-btn-inner"></div></div>
           </div>
       </div>
