--- a/m/index.html
+++ b/m/index.html
@@ -42,7 +42,7 @@
     <!---// moving start -->
     <section class="main">
       <div class="main-bg" >
-        <div class="bg"></div>
+        <div class="bg" id="bg"></div>
         <div class="road" id="road"></div>
       </div>
       <div class="main-top">
@@ -200,6 +200,7 @@
 </section>
     </script>
     <script type="text/tpl" id="gallery-mask-tpl">
+<!-- gallery mask -->
 <section id="gallery-mask" class="gallery-mask lpn-mask">
   <span class="lpn-ghost"></span>
   <div class="lpn-panel" >
